# baton

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  baton-spec-v0_4.md  baton.toml  changeset.md  crates.js  help.html  index.html  install.sh  settings.html  src-files.js  testing-plan-v2.md  uninstall.sh
.baton/: history.db
baton/: all.html  index.html  sidebar-items.js
docs/: ARCHITECTURE.md  BOUNDARIES.md  CONVENTIONS.md  DOCS.md  SPEC.md  STYLE.md  TESTING.md
homebrew/: baton.rb
prompts/: cross-module-consistency.md  doc-completeness.md  error-variant-coverage.md  placeholder-contract.md  runtime-adapter-contract.md  status-exhaustiveness.md
search.index/: 00ec632eb2ef.js  0276872b0d2f.js  0284508bffb1.js  042f9b70e1dd.js  04aaa02ccf41.js  09b38ad1a0eb.js  0b64119c207a.js  0b7818993abb.js  0ba74066dbd7.js  0c60528de3f4.js  0e60cf827778.js  12104e5b860a.js  12cc8b9a5ec6.js  12d8515b82cd.js  1392ce7af033.js  13961e371050.js  147409ce45a5.js  14e35e43bf88.js  15991845ba56.js  16690599b23e.js  1706362a8e2d.js  198922cac7e3.js  1bc169cb61a0.js  21066279fda9.js  22c6c390f9ad.js  238db08cb0a1.js  23d3d7cab680.js  24d2d803f260.js  24db0307ead4.js  2524bc67e9e0.js  25ab89ac8a4f.js  25b698c55b21.js  2751d59bdcf1.js  296b91d636f1.js  29d30a509f14.js  2a88669b64d4.js  2ab2057f4cdf.js  2e4bf999078c.js  2e4f6a680fee.js  2f2bf608e948.js  (+61 more)
spec/: add.md  cli.md  config.md  exec.md  history.md  main.md  placeholder.md  prompt.md  provider.md  runtime.md  spec_example.md  types.md  verdict_parser.md
src/: add.rs  config.rs  error.rs  exec.rs  history.rs  lib.rs  main.rs  placeholder.rs  prompt.rs  provider.rs  test_helpers.rs  types.rs  verdict_parser.rs
templates/: adversarial-review.md  doc-completeness.md  spec-compliance.md
tests/: cli.rs  e2e.rs  smoke.rs
validators/: fuzz-cli-args.sh  fuzz-config-parser.sh  fuzz-env-var-resolution.sh  fuzz-placeholder-resolution.sh  fuzz-run-if-expression.sh  fuzz-verdict-parser.sh  invariant-derive-order.sh  invariant-error-messages.sh  invariant-module-layers.sh  invariant-no-global-state.sh  invariant-no-hardcoded-version.sh  invariant-no-hashmap.sh  invariant-no-println-in-lib.sh  invariant-no-std-result.sh  invariant-no-unwrap-in-prod.sh  invariant-test-at-bottom.sh  invariant-two-stage-config.sh  lib.sh  quality-max-fn-length.sh  quality-no-todo-fixme.sh  regression-exit-code-contract.sh  regression-spec-assertion-count.sh  spec-format-valid.sh  (+8 more)
(+293 files in other folders)
