[package]
name = "baton"
version = "0.4.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
