[package]
name = "baton"
version = "0.7.1"
edition = "2021"
description = "A composable validation gate for AI agent outputs"
repository = "https://github.com/apierron/baton"
documentation = "https://apierron.github.io/baton/baton/"
license = "MIT"
keywords = ["validation", "cli", "llm", "agent", "testing"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "blocking",
    "multipart",
    "rustls-tls",
] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
thiserror = "2"
flate2 = "1"
tar = "0.4"
zip = "2"
toml_edit = "0.22"
dialoguer = "0.11"
atty = "0.2.14"
glob-match = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
httpmock = "0.8"
